# ParRay

./: .gitignore  README.md
scripts/: batch_script.slurm  batch_script_full.slurm  batch_script_light.slurm  sing_exec.sh  sing_shell.sh
src/: CMakeLists.txt  camera.h  color.h  common.h  hittable.h  hittable_list.h  main.cc  marble_single_thread.cc  material.h  ray.h  sphere.h  vec3.h
src/benchmark/: CMakeLists.txt  benchmark_bvh.cpp  benchmark_bvh_mpi.cpp  benchmark_bvh_mpi_lb.cpp  benchmark_test.cpp
src/bvh/: CMakeLists.txt  boundable.cpp  boundable.h  boundable_test.cpp  bvh.cpp  bvh.hpp  bvh_test.cpp  ray_tracing.cpp  ray_tracing.h  sphere_bvh.cpp  sphere_bvh_detection.cpp  sphere_bvh_mpi.cpp  sphere_bvh_openmp.cpp  sphere_bvh_openmp_tiled.cpp  sphere_bvh_single.cpp
src/common/: CMakeLists.txt  camera.h  color.cpp  color.h  common.cpp  common.h  hittable.h  hittable_list.cpp  hittable_list.h  material.h  ray.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
src/data_porting/: CMakeLists.txt  data_main.cpp  data_porting.cpp  data_porting.h  data_porting_test.cpp  sphere_gen.cpp  sphere_generation.cpp  sphere_generation.h
src/simple_tracer/: CMakeLists.txt  marble_single_thread.cc
writeup/data/: slurm-38775275.out
